--- a/index.html
+++ b/index.html
@@ -1,50 +1,3 @@
-<!-- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-2022.09.12
-version: 220912测试版
-测试版代码，后期仍需优化
-
-Copyright 2022 晚秋 | Made with love by 晚秋
-
-你tm看什么，刚写好没优化的代码也敢抄？
-稳定版代码已开源
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--->
-
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -64,7 +17,7 @@ Copyright 2022 晚秋 | Made with love by 晚秋
     <link rel="shortcut icon" href="img/logo.ico">
     <script type="text/javascript" src="https://api.wanqiu.tk/yiyan/?code=js"></script>
 
-    <!-- <script>
+    <script>
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
@@ -72,7 +25,7 @@ Copyright 2022 晚秋 | Made with love by 晚秋
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
-    </script>         -->
+    </script>
 </head>
 
 <body id="background">
