--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <li>2022年4月7日，升级为HTTPS安全协议</li>
                     <li>2022年4月5日，更改域名为：www.wanqiu.tk</li>
                     <li>2022年2月5日，建立博客</li>
-                    <li>2022年2月4日，本站建立</li>
+                    <li>2022年2月4日，本站建立<br>(其实网站从2021年就开始做辽，不过当时是主要是家用NAS)</li>
                 </ul>
             </div>
         </div>
