--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             <div class="fenge"></div>
             <div class="journal">
                 <ul>
+                    <li>2022年8月26日，更换博客</li>
                     <li>2022年6月19日，新增备用域名：wanqiuya.eu.org</li>
                     <li>2022年4月18日，网站原创界面上线</li>
                     <li>2022年4月7日，升级为HTTPS安全协议</li>
