--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
     </div>
     <div class="bottom">
-        ©2022 晚秋 | Made with love by 晚秋
+        ©2022 <a href="https://www.wanqiu.tk" target="_blank">晚秋</a> | Made with love by <a href="https://www.wanqiu.tk" target="_blank">晚秋</a>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
