删除部分内容

--- a/index.html
+++ b/index.html
@@ -133,17 +133,6 @@
                             <div class="jiantou">></div>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="https://b23.tv/R2v7FwW" target="_blank">
-                            <div class="friend-logo" id="laobaicaideyipi-logo"></div>
-                            <div class="friend-name">
-                                <h6 class="name">老白菜的一批</h6>
-                                <p class="website">bilibili</p>
-                            </div>
-                            <div class="jiantou">></div>
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -178,7 +167,7 @@
     <div class="bottom">
         ©2022 <a href="https://www.wanqiu.tk" target="_blank">晚秋</a> | Made with love by <a href="https://www.wanqiu.tk" target="_blank">晚秋</a>
     </div>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="nav.js"></script>
 </body>
 
 </html>
