--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
             <div class="fenge"></div>
             <div class="journal">
                 <ul>
+                    <li>2022年11月1日，新增域名：wanqiu.ml</li>
                     <li>2022年8月26日，更换博客</li>
                     <li>2022年6月19日，新增备用域名：wanqiuya.eu.org</li>
                     <li>2022年4月18日，网站原创界面上线</li>
                     <li>2022年4月7日，升级为HTTPS安全协议</li>
-                    <li>2022年4月5日，更改域名为：www.wanqiu.tk</li>
+                    <li>2022年4月5日，更改域名为：wanqiu.tk</li>
                     <li>2022年2月5日，建立博客</li>
                     <li>2022年2月4日，本站建立<br>(其实网站从2021年就开始做辽，不过当时主要是家用NAS)</li>
                 </ul>
