--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="img/logo.ico">
     <script type="text/javascript" src="https://api.wanqiu.tk/yiyan/?code=js"></script>
 
-    <script>
+    <!-- <script>
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
@@ -25,10 +25,10 @@
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
-    </script>        
+    </script>         -->
 </head>
 
-<body id="background">
+<body>
     <div class="main">
         <div class="left">
             <!-- logo部分 -->
@@ -168,7 +168,7 @@
     <div class="bottom">
         ©2022 <a href="https://www.wanqiu.tk" target="_blank">晚秋</a> | Made with love by <a href="https://www.wanqiu.tk" target="_blank">晚秋</a>
     </div>
-    <script type="text/javascript" src="nav.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
