--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="img/logo.ico">
     <script type="text/javascript" src="https://api.wanqiu.tk/yiyan/?code=js"></script>
 
-    <!-- <script>
+    <script>
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
@@ -25,7 +25,7 @@
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
-    </script>         -->
+    </script>
 </head>
 
 <body>
