--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="friend">
                 <ul>
                     <li>
-                        <a href="https://www.chenshifanmeng.cn" target="_blank">
+                        <a href="https://www.chenshifanmeng.cn" target="_blank" rel="nofollow">
                             <div class="friend-logo" id="chenshifanmeng-logo"></div>
                             <div class="friend-name">
                                 <h6 class="name">尘世樊梦</h6>
