--- a/index.html
+++ b/index.html
@@ -401,7 +401,11 @@
                     <li>2022年4月7日，升级为HTTPS安全协议</li>
                     <li>2022年4月5日，更改域名为：wanqiu.tk</li>
                     <li>2022年2月5日，建立博客</li>
-                    <li>2022年2月4日，本站建立<br>(其实网站从2021年就开始做辽，不过当时主要是家用NAS)</li>
+                    <li>
+                        2022年2月4日，本站建立<br>
+                        <span id="sitetime">加载中...</span><br>
+                        (其实网站从2021年就开始做辽，不过当时主要是家用NAS)
+                    </li>
                 </ul>
             </div>
         </div>
@@ -417,7 +421,7 @@
         </div>
     </div>
     <div class="bottom">
-        ©2022 <a href="https://www.wanqiu.tk" target="_blank">晚秋</a> | Made with love by <a href="https://www.wanqiu.tk" target="_blank">晚秋</a>
+        ©2022-2023 <a href="https://www.wanqiu.tk" target="_blank">晚秋</a> | Made with love by <a href="https://www.wanqiu.tk" target="_blank">晚秋</a>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
